--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">IQMojo</string>
+    <string name="join_us_with_facebook">Join us with facebook</string>
+    <string name="or">OR</string>
+    <string name="log_in_with_google">Log in with Google</string>
+    <string name="get_otp">Get OTP</string>
+    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
 </resources>
