--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,10 @@
     <string name="log_in_with_google">Log in with Google</string>
     <string name="get_otp">Get OTP</string>
     <string name="enter_your_mobile_number">Enter your Mobile Number</string>
+    <string name="enter_otp">Enter OTP</string>
+    <string name="error_network_not_available">Communication Failure with server. \nPlease Check GPRS Settings in Handset.</string>
 
     /*fb app id*/
     <string name="facebook_app_id">111749099509872</string>
+    <string name="google_signin_server_client_id">681782354637-j74nv0l08vsvb3408ou7uuu1rpunvh4b.apps.googleusercontent.com</string>
 </resources>
