--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     /*fb app id*/
     <string name="facebook_app_id">111749099509872</string>
     <string name="google_signin_server_client_id">681782354637-j74nv0l08vsvb3408ou7uuu1rpunvh4b.apps.googleusercontent.com</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
