changes in arrow and header of transaction list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="date">DATE</string>
     <string name="activity">ACTIVITY</string>
     <string name="amount_header">AMOUNT</string>
+    <string name="RupeeSign">\u20B9 </string>
 </resources>
 
 
